--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://abhiram-j.github.io/task-tracker",
   "name": "task-tracker",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
